samples/_failures_safe/1761506712_ee4a88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d25f4c0.c: In function ‘main’:
./samples/SAFE/__tmp_4d25f4c0.c:157:9: error: expected declaration or statement at end of input
  157 |         }
      |         ^
./samples/SAFE/__tmp_4d25f4c0.c:157:9: error: expected declaration or statement at end of input
